# Killer-Whale

./: README.md  convertPNGtoBIn.py  image_data.c
docs/RP2040-LCD-1.28/Arduino/RP2040-LCD-1.28/: DEV_Config.cpp  DEV_Config.h  RP2040-LCD-1.28.ino  font24CN.cpp  fonts.h
docs/RP2040-LCD-1.28/c/: CMakeLists.txt
docs/RP2040-LCD-1.28/c/examples/: LCD_1in28_test.c
docs/RP2040-LCD-1.28/c/lib/GUI/: GUI_Paint.c
docs/RP2040-LCD-1.28/c/uf2/: RP2040-LCD-1.28.uf2
docs/rendu/: boitier.step  fond de boitier.step
src/: CMakeLists.txt  main.c
src/examples/: CMakeLists.txt  LCD_1in28_test.c
src/lib/GUI/: GUI_Paint.c  GUI_Paint.h
src/lib/Touch/: CST816S.c
src/source/: CMakeLists.txt  Horloge.c  Horloge.h  Images.c  Images.h  LCD_Test.h  Menu.c  Menu.h  TouchData.c  TouchData.h
